# BMAD-METHOD

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  README_CN.md  README_VN.md  eslint.config.mjs  package-lock.json  package.json  pyproject.toml  removals.txt
.augment/: code_review_guidelines.yaml
.claude-plugin/: marketplace.json
.github/workflows/: cross-os-determinism.yaml  publish.yaml  quality.yaml
.husky/: pre-commit
docs/: _STYLE_GUIDE.md  release-checklist.md
docs/compile/: author-migration-guide.md  bmad-customize-walkthrough.md  bmad-lock-schema.md  dev-notes-template.md  explain-vocabulary.md  migration-cookbook.md  (+3 more)
proposals/: bmad-skill-compiler-architecture.md  bmad-skill-compiler-prd.md  bmad-skill-compiler-proposal.md  epics.md  research-prompt-compilation-landscape.md
test/: test-batch-install.js  test-component-installer.js  test-component-integration.js  test-file-refs-csv.js  test-install-routing.js  test-install-to-bmad.js  test-installation-components.js  test-installer-no-migrated.js  test-invoke-python.js  test-model3-distribution-matrix.js  test-quick-dev-renderer.js  test-shared-components-copy.js  test-shared-root-copy.js  test-validate-compile.js  test-validate-skills.js  test-workflow-path-regex.js
tools/: build-docs.mjs  ci-hash-consolidate.py  ci-hash.py  platform-codes.yaml  python-env.js  regenerate-bmad-help-baseline.py  run-python.js  skill-validator.md  update-upstream-and-install-axonify.sh  validate-compile.js  validate-file-refs.js  validate-skills.js
website/: astro.config.mjs
(+612 files in other folders)
